# pipx-scripts

./: .gitignore  README.md  install.sh
brightshift/: README.md  pyproject.toml
brightshift/brightshift/: __main__.py  core.py
dictate/: pyproject.toml
dictate/dictate/: __main__.py
fitbit/: pyproject.toml
fitbit/fitbit/: core.py
fixsteamcompatibility/: README.md  pyproject.toml
fixsteamcompatibility/fixsteamcompatibility/: __main__.py  core.py
kernelcleaner/: README.md  pyproject.toml
kernelcleaner/kernelcleaner/: __main__.py  core.py
meshchat/: README.md  pyproject.toml
meshchat/meshchat/: __main__.py
shrinkaudio/: README.md  pyproject.toml
shrinkaudio/shrinkaudio/: __main__.py  core.py
wallpapergenerator/: README.md  pyproject.toml  updatewallpaper.sh
wallpapergenerator/wallpapergenerator/: __main__.py  core.py
wikiupdate/: README.md  pyproject.toml
wikiupdate/wikiupdate/: __main__.py
ytgrabber/: README.md  pyproject.toml
ytgrabber/ytgrabber/: __main__.py  core.py
