[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitbit"
version = "0.4.4"
description = "Fetch Fitbit OAuth2 token from the command-line"
authors = [ { name = "nrrdio", email = "nrrdio@outlook.com" } ]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31"
]

[project.scripts]
fitbit = "fitbit.core:main"
