[project]
name = "wallpapergenerator"
version = "0.10.1"
description = "Generate AI wallpapers using OpenAI's GPT-image-1 with response models and iterative feedback"
authors = [{ name = "nrrdio", email = "nrrdio@outlook.com" }]
requires-python = ">=3.7"
dependencies = [
    "openai",
    "requests",
    "Pillow",
    "pytz"
]

[project.scripts]
wallpapergenerator = "wallpapergenerator.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
