[project]
name = "wikiupdate"
version = "1.1.3"
description = "A CLI tool to update MediaWiki with latest Wikipedia dumps"
authors = [{ name = "nrrdio", email = "nrrdio@outlook.com" }]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
]
requires-python = ">=3.10"

[project.scripts]
wikiupdate = "wikiupdate.__main__:main"
