[project]
name = "ytgrabber"
version = "0.1.0"
description = "Download and tag YouTube audio using yt-dlp and GPT"
authors = [{name = "nrrdio", email = "nrrdio@outlook.com"}]
requires-python = ">=3.7"
dependencies = ["requests","mutagen","openai"]

[project.scripts]
ytgrabber = "ytgrabber.__main__:main"
